update 14/11/2025