@@ -7,12 +7,13 @@ import com.example.demo.service.UserService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
-import org.springframework.web.bind.annotation.*;
 import org.springframework.ui.Model;
+import org.springframework.web.bind.annotation.*;
 
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 @Controller
 @RequestMapping("/admin")
@@ -24,37 +25,66 @@ public class AdminController {
     @Autowired
     private EventService eventService;
 
-@GetMapping("/admin")
-public String showAdminDashboard(Model model) {
-    // Lấy danh sách người dùng
-    List<User> allUsers = userService.findAll();
-    model.addAttribute("totalUsers", allUsers.size());
+    @GetMapping("/admin")
+    public String showAdminDashboard(Model model) {
+        // Lấy danh sách người dùng
+        List<User> allUsers = userService.findAll();
+        model.addAttribute("totalUsers", allUsers.size());
 
-    // Lấy danh sách sự kiện
-    List<Event> allEvents = eventService.getAllEvents();
-    long activeEvents = allEvents.stream()
-        .filter(e -> "DangDienRa".equals(e.getTrangThai()))
-        .count();
-    long pendingEvents = allEvents.stream()
-        .filter(e -> "SapDienRa".equals(e.getTrangThai()))
-        .count();
+        // Lấy danh sách sự kiện
+        List<Event> allEvents = eventService.getAllEvents();
+        long activeEvents = allEvents.stream()
+            .filter(e -> "DangDienRa".equals(e.getTrangThai()))
+            .count();
+        long pendingEvents = allEvents.stream()
+            .filter(e -> "SapDienRa".equals(e.getTrangThai()))
+            .count();
 
-    // Gửi dữ liệu sang view
-    model.addAttribute("activeEvents", activeEvents);
-    model.addAttribute("pendingEvents", pendingEvents);
-    model.addAttribute("violationEvents", 0); // Dữ liệu tạm
-    model.addAttribute("notificationCount", 5); // Dữ liệu tạm
+        // Gửi dữ liệu sang view
+        model.addAttribute("activeEvents", activeEvents);
+        model.addAttribute("pendingEvents", pendingEvents);
+        model.addAttribute("violationEvents", 0); // Dữ liệu tạm
+        model.addAttribute("notificationCount", 5); // Dữ liệu tạm
 
-    // Lấy 3 sự kiện gần nhất
-    List<Event> recentEvents = allEvents.stream()
-        .limit(3)
-        .toList();
-    model.addAttribute("recentEvents", recentEvents);
+        // Lấy 3 sự kiện gần nhất
+        List<Event> recentEvents = allEvents.stream()
+            .limit(3)
+            .collect(Collectors.toList());
+        model.addAttribute("recentEvents", recentEvents);
 
-    // Trả về tên view (VD: admin/dashboard.jsp)
-    return "admin/admin";
-}
+        return "admin/admin";
+    }
 
+    // API Dashboard data
+    @GetMapping("/api/dashboard")
+    @ResponseBody
+    public Map<String, Object> getDashboardData() {
+        Map<String, Object> data = new HashMap<>();
+        
+        List<User> allUsers = userService.findAll();
+        List<Event> allEvents = eventService.getAllEvents();
+        
+        long activeEvents = allEvents.stream()
+            .filter(e -> "DangDienRa".equals(e.getTrangThai()))
+            .count();
+        long pendingEvents = allEvents.stream()
+            .filter(e -> "SapDienRa".equals(e.getTrangThai()))
+            .count();
+            
+        data.put("totalUsers", allUsers.size());
+        data.put("activeEvents", activeEvents);
+        data.put("pendingEvents", pendingEvents);
+        data.put("violationEvents", 0);
+        data.put("notificationCount", 5);
+        
+        // Recent events (last 3)
+        List<Event> recentEvents = allEvents.stream()
+            .limit(3)
+            .collect(Collectors.toList());
+        data.put("recentEvents", recentEvents);
+        
+        return data;
+    }
 
     // Get users with filtering
     @GetMapping("/api/users")
@@ -156,15 +186,18 @@ public String showAdminDashboard(Model model) {
         return ResponseEntity.notFound().build();
     }
 
-    // Approve event
+
+
+    // API Approve event
     @PostMapping("/api/events/{id}/approve")
-    public ResponseEntity<Map<String, Object>> approveEvent(@PathVariable Long id) {
+    @ResponseBody
+    public Map<String, Object> approveEvent(@PathVariable Long id) {
         Map<String, Object> response = new HashMap<>();
         
         Event event = eventService.getEventById(id);
         if (event != null) {
             event.setTrangThai("DangDienRa");
-            // You'll need to add update method in EventService
+            eventService.updateSuKien(event);
             response.put("success", true);
             response.put("message", "Đã phê duyệt sự kiện");
         } else {
@@ -172,18 +205,19 @@ public String showAdminDashboard(Model model) {
             response.put("message", "Không tìm thấy sự kiện");
         }
         
-        return ResponseEntity.ok(response);
+        return response;
     }
 
-    // Reject event
+    // API Reject event
     @PostMapping("/api/events/{id}/reject")
-    public ResponseEntity<Map<String, Object>> rejectEvent(@PathVariable Long id) {
+    @ResponseBody
+    public Map<String, Object> rejectEvent(@PathVariable Long id) {
         Map<String, Object> response = new HashMap<>();
         
         Event event = eventService.getEventById(id);
         if (event != null) {
             event.setTrangThai("Huy");
-            // You'll need to add update method in EventService
+            eventService.updateSuKien(event);
             response.put("success", true);
             response.put("message", "Đã từ chối sự kiện");
         } else {
@@ -191,12 +225,13 @@ public String showAdminDashboard(Model model) {
             response.put("message", "Không tìm thấy sự kiện");
         }
         
-        return ResponseEntity.ok(response);
+        return response;
     }
 
-    // Delete event
+    // API Delete event
     @DeleteMapping("/api/events/{id}")
-    public ResponseEntity<Map<String, Object>> deleteEvent(@PathVariable Long id) {
+    @ResponseBody
+    public Map<String, Object> deleteEvent(@PathVariable Long id) {
         Map<String, Object> response = new HashMap<>();
         
         try {
@@ -205,15 +240,16 @@ public String showAdminDashboard(Model model) {
             response.put("message", "Đã xóa sự kiện");
         } catch (Exception e) {
             response.put("success", false);
-            response.put("message", "Lỗi khi xóa sự kiện");
+            response.put("message", "Lỗi khi xóa sự kiện: " + e.getMessage());
         }
         
-        return ResponseEntity.ok(response);
+        return response;
     }
 
-    // Analytics data
+    // API Analytics data
     @GetMapping("/api/analytics")
-    public ResponseEntity<Map<String, Object>> getAnalytics() {
+    @ResponseBody
+    public Map<String, Object> getAnalytics() {
         Map<String, Object> data = new HashMap<>();
         
         List<User> allUsers = userService.findAll();
@@ -226,42 +262,49 @@ public String showAdminDashboard(Model model) {
         data.put("pendingEvents", allEvents.stream()
             .filter(e -> "SapDienRa".equals(e.getTrangThai()))
             .count());
-        data.put("avgParticipation", 85); // Placeholder
+        data.put("avgParticipation", 85); // Placeholder - calculate real average
         
-        return ResponseEntity.ok(data);
+        return data;
     }
 
-    // Save suggestion configuration
+    // API Save suggestion configuration
     @PostMapping("/api/suggestions/config")
-    public ResponseEntity<Map<String, Object>> saveSuggestionConfig(@RequestBody Map<String, Object> config) {
+    @ResponseBody
+    public Map<String, Object> saveSuggestionConfig(@RequestBody Map<String, Object> config) {
         Map<String, Object> response = new HashMap<>();
+        // In real application, save to database
         response.put("success", true);
         response.put("message", "Đã lưu cấu hình gợi ý");
-        return ResponseEntity.ok(response);
+        return response;
     }
 
-    // Save system settings
+    // API Save system settings
     @PostMapping("/api/settings")
-    public ResponseEntity<Map<String, Object>> saveSystemSettings(@RequestBody Map<String, String> settings) {
+    @ResponseBody
+    public Map<String, Object> saveSystemSettings(@RequestBody Map<String, String> settings) {
         Map<String, Object> response = new HashMap<>();
+        // In real application, save to database
         response.put("success", true);
         response.put("message", "Đã lưu cài đặt hệ thống");
-        return ResponseEntity.ok(response);
+        return response;
     }
 
-    // Export endpoints (placeholder)
+    // API Export users
     @GetMapping("/api/users/export")
     public void exportUsers() {
-        // Implement CSV export
+        // Implement CSV export logic
+        // This would typically return a file download
     }
 
+    // API Export events
     @GetMapping("/api/events/export")
     public void exportEvents() {
-        // Implement CSV export
+        // Implement CSV export logic
     }
 
+    // API Download report
     @GetMapping("/api/analytics/report")
     public void downloadReport() {
-        // Implement report download
+        // Implement report download logic
     }
 }
